; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_mp_dispatch_adjust_timeout.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_mp_dispatch_adjust_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_dispatch_queue = type { i64, i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_dispatch_adjust_timeout(%struct.mp_dispatch_queue* %0, i64 %1) #0 {
  %3 = alloca %struct.mp_dispatch_queue*, align 8
  %4 = alloca i64, align 8
  store %struct.mp_dispatch_queue* %0, %struct.mp_dispatch_queue** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %6 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %5, i32 0, i32 1
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %9 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %2
  %13 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %14 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp sgt i64 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %12
  %19 = load i64, i64* %4, align 8
  %20 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %21 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  %22 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %23 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %22, i32 0, i32 2
  %24 = call i32 @pthread_cond_broadcast(i32* %23)
  br label %25

25:                                               ; preds = %18, %12, %2
  %26 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %3, align 8
  %27 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %26, i32 0, i32 1
  %28 = call i32 @pthread_mutex_unlock(i32* %27)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_cond_broadcast(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
